# InkTime

./: .env.example  .gitignore  InkTime.code-workspace  README.md  pyproject.toml
firmware/: platformio.ini
firmware/include/: config.h  display.h  downloader.h  nvs_manager.h  sleep_manager.h  wifi_manager.h
firmware/src/: main.cpp
inktime_server/: __init__.py  __main__.py  config.py
photo_analyzer/: __init__.py  __main__.py  city.py  config.py  database.py  exif.py  models.py  vlm.py
server/: __init__.py  __main__.py  app.py  cache.py  composition.py  config.py  database.py  dither.py  enhanced_caption.py  renderer.py  routes.py  selector.py  text_overlay.py
tests/: test_cache_persistence.py  test_dither.py  test_enhanced_caption.py  test_local_areas.py  test_multi_dir.py  test_multilingual.py  test_routes.py  test_selection_mode.py  test_text_overlay.py
